<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="550dp"
        app:cardCornerRadius="50dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="110dp"
                android:layout_height="100dp"
                android:layout_marginStart="110dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="110dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/sort_icon" />


            <TextView
                android:id="@+id/text_sortby"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="152dp"
                android:background="@android:color/transparent"
                android:fontFamily="@font/glacial_indifference_bold"
                android:text="Sort by:"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginBottom="90dp"
                android:checkedButton="@+id/button1"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/text_alphabetical"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:backgroundTint="@drawable/button_effects"
                    android:buttonTint="@drawable/button_effects"
                    android:fontFamily="@font/glacial_indifference"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Alphabetical"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/text_deadline"
                    android:backgroundTint="@drawable/button_effects"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/glacial_indifference"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:buttonTint="@drawable/button_effects"
                    android:text="Deadline"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

                <RadioButton
                    android:id="@+id/text_label"
                    android:backgroundTint="@drawable/button_effects"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:fontFamily="@font/glacial_indifference"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:buttonTint="@drawable/button_effects"
                    android:text="Label"
                    android:textAllCaps="false"
                    android:textSize="18sp" />

            </RadioGroup>


            <TextView
                android:id="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="216dp"
                android:layout_marginEnd="52dp"
                android:text="@string/arrowUp"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/arrow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="270dp"
                android:layout_marginEnd="52dp"
                android:text="@string/arrowUp"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/clearButton"
                android:layout_width="100dp"
                android:layout_height="35dp"
                android:layout_gravity="end"
                android:layout_marginStart="95dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="100dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/cyan"
                android:fontFamily="@font/glacial_indifference_bold"
                android:text="Clear"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/frameLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/radio_group"
                app:layout_constraintVertical_bias="0.0" />

            <FrameLayout
                android:id="@+id/frameLayout"
                android:layout_width="274dp"
                android:layout_height="48dp"
                android:layout_gravity="bottom"
                android:layout_marginStart="30dp"
                android:layout_marginTop="470dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0">

                <Button
                    android:id="@+id/save_button"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_gravity="end"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#409215"
                    android:fontFamily="@font/glacial_indifference_bold"
                    android:text="@string/save"
                    android:textColor="@color/white" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="100dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="#FF1616"
                    android:fontFamily="@font/glacial_indifference_bold"
                    android:text="@string/cancel"
                    android:textColor="@color/white" />
            </FrameLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>