<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/plannerLayout"
    android:background="@color/light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Planner">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/linearLayout_Header"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="@color/red"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/back_button"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/back_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/glacial_indifference_bold"
                android:includeFontPadding="false"
                android:text="PLANNER"
                android:textColor="@color/white"
                android:textSize="44sp" />



            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/notifreq"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/notif_icon"
                app:shapeAppearanceOverlay="@style/Circle" />


        </RelativeLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/horizontal_calendar"
            android:layout_width="match_parent"
            android:layout_height="135dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".Planner">

            <ImageView
                android:id="@+id/iv_calendar_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_10"
                android:layout_marginTop="@dimen/margin_20"
                android:contentDescription="@string/cd_previous"
                android:src="@drawable/ic_previous"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_calendar_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_10"
                android:contentDescription="@string/cd_next"
                android:src="@drawable/ic_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_date_month"
                android:fontFamily="@font/glacial_indifference"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAllCaps="true"
                android:textFontWeight="1000"
                android:textSize="25sp"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="@id/iv_calendar_next"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/iv_calendar_next"
                tools:text="MONTH AND YEAR" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendar_recycler"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_date_month" />

        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:id="@+id/lay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="24dp"
            android:background="@color/light_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/horizontal_calendar">

                <TextView
                    android:id="@+id/textView_TaskList"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_marginBottom="12dp"
                    android:fontFamily="@font/glacial_indifference_bold"
                    android:text="TASK LIST:"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintStart_toStartOf="parent"/>

                <ToggleButton
                    android:id="@+id/textView_Done"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="12dp"
                    android:background="@drawable/rounded_button"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/glacial_indifference_bold"
                    android:textOff="Tasks Done"
                    android:textOn="To do"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:padding="2dp"
                    app:layout_constraintEnd_toEndOf="parent" />

            </RelativeLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@id/taskList_Wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginEnd="1dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_TaskList">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/Tasklist"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:listitem="@layout/view_tasks" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:background="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_layout">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/label_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/label_icon"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@id/create_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shapeAppearanceOverlay="@style/Circle">

        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/create_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/create_icon"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toStartOf="@id/sort_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_button"
            app:shapeAppearanceOverlay="@style/Circle">

        </com.google.android.material.imageview.ShapeableImageView>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/sort_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/sort_icon"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toEndOf="@+id/create_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shapeAppearanceOverlay="@style/Circle">
        </com.google.android.material.imageview.ShapeableImageView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>