...
            android:padding = "40dp"
            android:background="@color/white"
            android:orientation="vertical">


            <EditText
                android:id="@+id/edit_title"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/glacial_indifference_bold"
                android:inputType="textShortMessage"
                android:hint="Title"
                android:textSize="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edit_details"
                android:layout_width="270dp"
                android:layout_height="270dp"
                android:background="@drawable/roundborder"
                android:backgroundTint="#d3d3d3"
                android:fontFamily="@font/glacial_indifference"
                android:gravity="top|start"
...
