...
            android:layout_marginEnd="10dp"
            android:background="@drawable/food_intake_check"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/btnDeleteTask"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end|bottom"
            android:layout_margin="10dp"
            android:background="@drawable/delete_trans"
            app:layout_constraintBottom_toBottomOf="parent"
...
